# life

./: .clang-format  CMakeLists.txt  library.cpp  library.h  main.cpp
game/: Game.cpp  Game.h  GameManager.cpp  GameManager.h
game/effects/: Effect.cpp  Effect.h  EffectTarget.h  Requirement.cpp  Requirement.h
game/resources/: Building.cpp  Building.h  Cost.cpp  Cost.h  Resource.cpp  Resource.h
game/utils/: IO.cpp  IO.h  Logger.cpp  Logger.h
resources/: buildings.json  resources.json
